k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dvwa-group25-web

---

apiVersion: v1
kind: Namespace
metadata:
  name: dvwa-group25-mysql
