k8s/deployment-dvwa.yml
---
apiVersion: apps/v1
kind: Deployment


###
### Deployment Metadata
###
metadata:
  name: dvwa-group25-web
  namespace: dvwa-group25-web


###
### Specs
###
spec:
  replicas: 1

  selector:
    matchLabels:
      app: dvwa-web
      tier: frontend

  template:

    # Template Metadata to be used by service for discovery
    metadata:
      labels:
        app: dvwa-web
        tier: frontend

    # Container/Volume definition
    spec:
      serviceAccountName: sa-web
      containers:
        - name: dvwa
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 33
            runAsGroup: 33
            capabilities:
              drop:
                - ALL
          image: europe-docker.pkg.dev/asgroup25/registry-as-25/dvwa:latest
          ports:
            - containerPort: 80
