k8s/deployment-mysql.yml
---
apiVersion: apps/v1
kind: Deployment


###
### Deployment Metadata
###
metadata:
  name: dvwa-group25-mysql
  namespace: dvwa-group25-mysql


###
### Specs
###
spec:
  replicas: 1

  selector:
    matchLabels:
      app: dvwa-mysql
      tier: backend

  template:

    # Template Metadata to be used by service for discovery
    metadata:
      labels:
        app: dvwa-mysql
        tier: backend

    # Container/Volume definition
    spec:
      serviceAccountName: sa-mysql
      containers:
        - name: mysql
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
          image: europe-docker.pkg.dev/asgroup25/registry-as-25/mariadb-10:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: dvwa-mysql-vol
              mountPath: /var/lib/mysql
      volumes:
        - name: dvwa-mysql-vol
          hostPath:
            path: "/var/lib/mysql"
