k8s/service-dvwa.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dvwa-web-service
  annotations: 
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: dvwa-web
    tier: frontend
  ports:
    - protocol: TCP
      # Port accessible inside cluster
      port: 8080
      # Port to forward to inside the pod
      targetPort: 80
