k8s/service-mysql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dvwa-mysql-service
spec:
  selector:
    app: dvwa-mysql
    namespace: dvwa-group25-mysql
    tier: backend
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
